style: minor fix with alignment

--- a/Etch-a-Sketch-/style.css
+++ b/Etch-a-Sketch-/style.css
@@ -16,7 +16,6 @@ body {
   margin-top: 50px;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 h1 {
